getting_started/test_files/semantic_errors/DuplicateLocalBlock.cpm
main(): int {
  {
    first: int
    first: int
  }
  return 0
}
